--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ MarkupSafe==2.1.3
 mysql==0.0.3
 mysqlclient
 packaging==23.2
-Pillow==10.0.1
+Pillow
 PyMySQL==1.1.0
 SQLAlchemy==2.0.21
 typing_extensions==4.8.0
